# collatz

./: .gitignore  ALPHA_TEST.md  CLAUDE.md  CNAME  README.md  pyproject.toml
.claude/: settings.local.json
.claude/memory/: MEMORY.md  README.md  feedback_reconfirm_on_new_info.md  feedback_typed_objects.md  project_genus_is_classifier.md  project_merge_driver_is_the_physics.md  project_server_is_coordinator.md  user_half_formed_observations_are_load_bearing.md
.github/workflows/: deploy.yml  emanon-e2e.yml
.obsidian/: workspace.json
collatz/: __init__.py  core.py  dropping.py  factorization.py  geometry.py  orbits.py  residues.py  stopping.py  utils.py  walsh.py  wavelets.py  zoo.py
collatz/embeddings/: __init__.py  concept.py  distance.py  iteration.py  keys.py  lenses.py  progression.py  style.py  trajectory.py
collatz/lfunctions/: __init__.py  averaging.py  characters.py  eisenstein.py  lattice_paths.py  lseries.py  orbit_lift.py
data/: cf_PA.npz  dropping_set_l_function.npz  dropping_zeta_zeros.npz  sign_pattern.npz  stopping_class_block_entropy.npz  stopping_class_controls.npz  sturmian_block_entropy.npz
docs/: 00-Index.md  Untitled.md
docs/.obsidian/: app.json  workspace.json
docs/Conjectures/: Affine Orbit Structure.md  Assume Collatz - Consequences.md  (+17 more)
emanon/: Cargo.toml  seed.txt
emanon/src/cli/: Cargo.toml  README.md
emanon/src/cli/src/: main.rs
emanon/src/cli/src/bounty/: mod.rs
emanon/src/cli/src/vrf/: mod.rs
emanon/src/cli/src/wallet/: mod.rs
emanon/src/collatz-rs/: Cargo.toml
emanon/src/collatz-rs/src/: lib.rs
emanon/src/programs/bounty-escrow/programs/bounty-escrow/: Cargo.toml
emanon/src/programs/bounty-escrow/programs/bounty-escrow/src/: lib.rs
emanon/src/programs/reputation-soulbound/programs/reputation-soulbound/: Cargo.toml
emanon/src/programs/reputation-soulbound/programs/reputation-soulbound/src/: lib.rs
emanon/src/programs/universe-cnft/programs/universe-cnft/: Cargo.toml
emanon/src/programs/universe-cnft/programs/universe-cnft/src/: lib.rs
notebooks/: 00-setup-and-validation.ipynb  01-classification-landscape.ipynb  02-prime-class-characters.ipynb  03-composite-factorization-patterns.ipynb  04-geometric-connections.ipynb  05-open-questions.ipynb  06-syracuse-exploration.ipynb  07-conjugate-variables.ipynb  08-primitive-sets-exploration.ipynb  09-collatz-embeddings.ipynb  10-embeddings-v2-force-drift.ipynb  11-embeddings-v3-angular-sector.ipynb  12-embeddings-v4-per-lens-drift.ipynb  13-embeddings-v5-real-only-drift.ipynb  14-embeddings-v6-trajectory-space.ipynb  15-embeddings-orthogonal-analogies.ipynb  16-embeddings-keys.ipynb  17-embeddings-style.ipynb  18-embeddings-progression.ipynb
scripts/: cf_renormalization.py  closed_form_alpha.py  collatz_27_anatomy.py  collatz_2adic_potential.py  collatz_alphabet_rotation.py  collatz_dropping_alphabet.py  collatz_dropping_transducer.py  collatz_fibonacci_fractal.py  collatz_fractal_variants.py  collatz_kozyrev_spectrum.py  collatz_log6_hecke_strip.py  collatz_log6_wobble.py  collatz_log6_wobble_bands.py  collatz_log6_wobble_cutoff.py  collatz_log6_wobble_followup.py  collatz_log6_wobble_plateaus.py  collatz_log6_wobble_resonance.py  collatz_nested_dropping.py  collatz_quasicrystal_diffraction.py  dropping_set_l_function.py  dropping_zeta_spectrum.py  plot_dropping_set_l.py  plot_dropping_zeros.py  prime_comma_independence.py  prime_dropping_residues.py  proof_sign_rule.py  qx_systems_analysis.py  sign_pattern_analysis.py  sign_rule_proof.py  spacing_statistics.py  stopping_class_block_entropy.py  stopping_class_controls.py  sturmian_block_entropy.py  sturmian_visualization.py  three_distance.py  verify_cycle_bound.py  verify_siegel_numen.py  zeros_convergence.py
site/: index.md  package-lock.json  package.json  publications.md
tests/: test_characters.py  test_eisenstein.py  test_embeddings.py  test_keys.py  test_lattice_paths.py  test_lseries_orbit_averaging.py  test_orbits.py  test_progression.py  test_residues.py  test_style.py  test_utils.py  test_walsh.py  test_wavelets.py
(+267 files in other folders)
