[package]
name = "bounty-escrow"
version = "0.1.0"
description = "Emanon bounty escrow: USDC held in PDA vault until verifiable universe delivery"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bounty_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
