[package]
name = "reputation-soulbound"
version = "0.1.0"
description = "Emanon soulbound reputation NFT: one-per-wallet, append-only achievement record"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation_soulbound"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
